@@ -1,5 +1,6 @@
 package tools.jackson.databind.introspect;
 
+import java.io.Serial;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -162,7 +163,7 @@ public final class AnnotatedConstructor
     @Override
     public String toString() {
         final int argCount = _constructor.getParameterCount();
-        return String.format("[constructor for %s (%d arg%s), annotations: %s",
+        return "[constructor for %s (%d arg%s), annotations: %s".formatted(
                 ClassUtil.nameOf(_constructor.getDeclaringClass()), argCount,
                 (argCount == 1) ? "" : "s", _annotations);
     }
@@ -184,6 +185,7 @@ public final class AnnotatedConstructor
     }
 
     class InvokerHolder extends UnreflectHandleSupplier {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         InvokerHolder(MethodType asType) {
